# ConstantSpeedInterpolation

./: CMakeLists.txt  README.md  id.txt
Trajectory/: CEF_trajectory.txt
log/: ffmpeg1
src/: ControlVideo.cc  FrameIdInterp.cc  VideoInterp.cc  interp2frames.cc
trajectory/: CEF_trajectory.ods  distance_corrected.csv  id.txt  trajectory2.txt
